# Icarus

./: README.md  lamma_index_llm_response_synthesis_(from_scratch).py  memory_constructor.py  pyproject.toml  rag.py  rag_openai.py  visual_question_answering.py
data/: data.txt  memory.json  qa_data.json
